<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
       android:src="@drawable/mainp"
        tools:ignore="ContentDescription"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:padding="5dp"
            android:src="@drawable/dd"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/plants"
            android:onClick="first"
            android:textSize="30sp"
            android:textColor="#33CC33"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:src="@drawable/basket"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:onClick="second"
            android:textSize="30sp"
            android:text="@string/fruits"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#33CC33" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon3"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:src="@drawable/sp"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/item3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:onClick="third"
            android:textSize="30sp"
            android:text="@string/spices"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#33CC33" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon4"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:padding="5dp"
            android:src="@drawable/mainnotes"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/item4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:onClick="forth"
            android:text="@string/remedies"
            android:textSize="30sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#33CC33" />
    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>